Fix tarmed displaying ziffer/text fields

--- a/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages.properties
+++ b/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages.properties
@@ -8945,6 +8945,8 @@ TarmedDetailDisplay_TPTec = Tarif technical
 
 TarmedDetailDisplay_TecInter = Technical Interpretation
 
+TarmedDetailDisplay_Text = Text
+
 TarmedDetailDisplay_TimeAct = Time service
 
 TarmedDetailDisplay_TimeBeforeAfter = Time before/after
@@ -8958,6 +8960,8 @@ TarmedDetailDisplay_TimeWrite = Time Finding
 TarmedDetailDisplay_Validity = Validity
 
 TarmedDetailDisplay_Validity_Unlimited = Unlimited
+
+TarmedDetailDisplay_Ziffer = Ziffer
 
 TarmedDetailDisplay_after = \ after 
 
