--- a/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_en.properties
+++ b/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_en.properties
@@ -8905,6 +8905,8 @@ TarmedDetailDisplay_TPTec = TP techn. power
 
 TarmedDetailDisplay_TecInter = Technical interpretation
 
+TarmedDetailDisplay_Text = Text
+
 TarmedDetailDisplay_TimeAct = Time performance
 
 TarmedDetailDisplay_TimeBeforeAfter = Time before / after
@@ -8918,6 +8920,8 @@ TarmedDetailDisplay_TimeWrite = Time findings
 TarmedDetailDisplay_Validity = validity
 
 TarmedDetailDisplay_Validity_Unlimited = Unlimited
+
+TarmedDetailDisplay_Ziffer = Ziffer
 
 TarmedDetailDisplay_after = \ after
 
