--- a/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_fr.properties
+++ b/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_fr.properties
@@ -8827,6 +8827,8 @@ TarmedDetailDisplay_TPTec = TP Techn. puissance
 
 TarmedDetailDisplay_TecInter = interpr\u00E9tation technique
 
+TarmedDetailDisplay_Text = Texte
+
 TarmedDetailDisplay_TimeAct = performances en temps
 
 TarmedDetailDisplay_TimeBeforeAfter = Avant / apr\u00E8s
@@ -8840,6 +8842,8 @@ TarmedDetailDisplay_TimeWrite = conclusion de temps
 TarmedDetailDisplay_Validity = validit\u00E9
 
 TarmedDetailDisplay_Validity_Unlimited = illimit\u00E9
+
+TarmedDetailDisplay_Ziffer = Code
 
 TarmedDetailDisplay_after = \ par
 
