--- a/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_it.properties
+++ b/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_it.properties
@@ -8827,6 +8827,8 @@ TarmedDetailDisplay_TPTec = TP Techn. potere
 
 TarmedDetailDisplay_TecInter = interpretazione tecnica
 
+TarmedDetailDisplay_Text = Text
+
 TarmedDetailDisplay_TimeAct = prestazioni in tempo
 
 TarmedDetailDisplay_TimeBeforeAfter = Tempo prima / dopo
@@ -8840,6 +8842,8 @@ TarmedDetailDisplay_TimeWrite = Trovare il tempo
 TarmedDetailDisplay_Validity = validit\u00E0
 
 TarmedDetailDisplay_Validity_Unlimited = illimitato
+
+TarmedDetailDisplay_Ziffer = Ziffer
 
 TarmedDetailDisplay_after = \ by
 
