--- a/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_de.properties
+++ b/bundles/ch.elexis.core.l10n/src/ch/elexis/core/l10n/messages_de.properties
@@ -8939,6 +8939,8 @@ TarmedDetailDisplay_TPTec = TP techn. Leistung
 
 TarmedDetailDisplay_TecInter = Technische Interpretation
 
+TarmedDetailDisplay_Text = Text
+
 TarmedDetailDisplay_TimeAct = Zeit Leistung
 
 TarmedDetailDisplay_TimeBeforeAfter = Zeit Vor/Nach
@@ -8952,6 +8954,8 @@ TarmedDetailDisplay_TimeWrite = Zeit Befund
 TarmedDetailDisplay_Validity = G\u00FCltigkeit
 
 TarmedDetailDisplay_Validity_Unlimited = Unbeschr\u00E4nkt
+
+TarmedDetailDisplay_Ziffer = Ziffer
 
 TarmedDetailDisplay_after = \ nach 
 
